--- a/internals/generators/container/appendPathToConstants.hbs
+++ b/internals/generators/container/appendPathToConstants.hbs
@@ -1,2 +1,2 @@
-  {{ properCase ComponentName }}Page = '/{{ camelCase ComponentName }}',
+  {{ properCase ComponentName }} = '/{{ camelCase ComponentName }}',
   // [INSERT NEW PAGE PATH ABOVE] < Needed for generating containers seamlessly
